--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,15 @@ body {
   font-family: "Euclid Circular A", sans-serif;
   text-decoration: none;
   color: #fcfcff;
+  background-color: #28293e;
 }
 
 ul,
 li {
   list-style: none;
+}
+
+input,
+button {
+  font-family: "Euclid Circular A", sans-serif;
 }
