--- a/src/components/Pages/Home/Home.module.css
+++ b/src/components/Pages/Home/Home.module.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding-top: 130px;
+  padding-top: 100px;
   width: 50vw;
 }
 
@@ -82,12 +82,28 @@
 }
 
 .home_content .credit {
-  margin: 140px 0 0;
+  margin: 94px 0 0;
   font-style: italic;
   font-weight: 400;
   font-size: 1.25rem;
   line-height: 1.25rem;
   letter-spacing: -0.3px;
+}
+
+.home_content .credit a {
+  transition: all 1s;
+}
+
+.home_content .credit:hover a {
+  color: #d5d5d6;
+}
+
+.home_image img {
+  transition: all 1s;
+}
+
+.home_image img:hover {
+  transform: scale(1.05);
 }
 
 @media screen and (max-width: 1080px) {
